--- a/ReadMe
+++ b/ReadMe
@@ -2,3 +2,4 @@ This game is a project for basic programming course
 In this game you can use space to go back to the menue
 SBDL was used to make ghraphics part of this project( you can see its sources in https://github.com/MSDehghan/SBDL)
 you can play this game by running game.exe(inside cmake-build-debug folder)
+You can see video of this game here (https://aparat.com/v/qKAcO)
